[package]
name = "accrete"
version = "0.1.5"
authors = ["Leonid <leonidgrr@gmail.com>"]
license="MIT"
repository = "https://github.com/LeonidGrr/accrete.git"
description="Rust port of Accrete, planetary system generation algorithm. Based on 'Formation of Planetary Systems by Aggregation: A Computer Simulation' by Stephen H. Dole. Improved and extended by many talented people during past ~50 years."
edition = "2018"
readme = "README.md"
keywords = ["accrete", "planetary", "system", "procedural", "generation"]

[dependencies]
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand_chacha = "0.3"