[package]
name = "accrete"
version = "0.2.1"
authors = ["Leonid <leonidgrr@gmail.com>"]
license="MIT"
repository = "https://github.com/LeonidGrr/accrete.git"
description="Rust port of Accrete, planetary system generation algorithm. Based on 'Formation of Planetary Systems by Aggregation: A Computer Simulation' by Stephen H. Dole. Improved and extended by many talented people during past ~50 years."
edition = "2021"
readme = "README.md"
keywords = ["accrete", "planetary", "system", "procedural", "generation"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
rand = "0.8.3"
getrandom = { version = "0.2.3", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
rand_chacha = { version = "0.3.1", features = ["serde1"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
