[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accrete = { path = "../.." }
bevy = "0.7.0"
bevy_polyline = "0.1"
bevy_prototype_debug_lines = { version = "0.6", features = ["3d"] }
bevy_egui = "0.13.0"
egui = "0.17.0"
bevy-inspector-egui = "0.10.0"
rand = "0.8.3"
getrandom = { version = "0.2.3", features = ["js"] }

[profile.dev]
opt-level = 2

[profile.dev.package.'*']
opt-level = 3

[profile.release]
lto="thin"

[workspace]
resolver = "2"
