[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accrete = { path = "../.." }
bevy = "0.7"
bevy_polyline = "0.2"
bevy_prototype_debug_lines = { version = "0.6", features = ["3d"] }
bevy_egui = "0.13"
bevy_hanabi = { version = "0.2", default-features = false, features = ["3d"] }
egui = "0.17"
bevy-inspector-egui = "0.10"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
ringbuffer = "0.8"
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras", branch = "main" }

[profile.dev]
opt-level = 2

[profile.dev.package.'*']
opt-level = 3

[profile.release]
lto="thin"

[workspace]
resolver = "2"
